[package]
name = "as-types"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: change it to "0.5", once released.
# kbs-types = { git = "https://github.com/virtee/kbs-types", rev = "c90df0e" }
kbs-types = { git = "https://github.com/jingyao-zhang/kbs-types.git", branch = "cb-attest" }
# kbs-types = { path = "../../kbs-types/" }
serde.workspace = true
serde_json.workspace = true
